# rayvise

./: AGENTS.md  CLAUDE.md  LICENSE.md  README.md  index.html  package.json  pnpm-workspace.yaml
.cursor/rules/: rust-tauri-backend.mdc
.cursor/skills/raypaste-vitest-tests/: SKILL.md
.github/workflows/: lint.yml  test.yml
docs/: APP_ICONS.md  CONTRIBUTING.md  DEV_GETTING_STARTED.md  LOCAL_HISTORY_STORAGE.md  LOCAL_LLM.md  MODEL_PROVIDER_COMPLIANCE.md  PLATFORM_COMPATIBILITY.md  TESTING_STRATEGY.md  WEBSITE_PROMPTS.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: apps.rs  browser_url.rs  focused_app.rs  local_llm.rs  mod.rs  website_icons.rs
src/components/Sidebar/: PromptsSection.tsx
src/components/ui/: button.tsx
src/components/website-prompts/: WebsitePromptSiteIcon.tsx
src/hooks/: useAICompletionListener.test.tsx  useAICompletionListener.ts  useLegacyStateMigration.ts
src/lib/: legacyMigration.test.ts  legacyMigration.ts
src/lib/core/: instantMode.test.ts  instantMode.ts  reviewMode.test.ts  reviewMode.ts
src/pages/: NotificationPage.tsx  ProgressPage.tsx  PromptPickPage.tsx  ReviewPage.test.tsx  ReviewPage.tsx  SettingsPage.tsx
src/pages/apps/: AppsPage.tsx
src/pages/history/: DetailDialog.tsx  EntryCard.tsx  HistoryPage.test.tsx  HistoryPage.tsx  OverviewPanel.tsx  (+1 more)
src/services/: overlayWindows.test.ts  overlayWindows.ts
src/stores/: appsStore.ts  promptsStore.ts  settingsStore.test.ts  settingsStore.ts
(+24 files in other folders)
